--- a/src/translation/languages/fr.json
+++ b/src/translation/languages/fr.json
@@ -1,4 +1,6 @@
 {
+  "badge.level.unknown": "Aucun badge",
+  "badge.level": "Badge pour le niveau {number}",
   "test.key": "Clé de test",
   "test.keyWithReplacedValue": "Pour moi, c’est un {value}. Un {value}, tout le monde sait ce que c’est…"
 }
