--- a/src/translation/languages/fr.json
+++ b/src/translation/languages/fr.json
@@ -1,6 +1,8 @@
 {
   "badge.level.unknown": "Aucun badge",
   "badge.level": "Badge pour le niveau {number}",
+  "skin": "Skin {name}",
   "test.key": "Clé de test",
-  "test.keyWithReplacedValue": "Pour moi, c’est un {value}. Un {value}, tout le monde sait ce que c’est…"
+  "test.keyWithReplacedValue": "Pour moi, c’est un {value}. Un {value}, tout le monde sait ce que c’est…",
+  "waiting": "En attente..."
 }
