--- a/src/translation/languages/fr.json
+++ b/src/translation/languages/fr.json
@@ -4,6 +4,8 @@
   "battleship-logo": "Logo Battleship",
   "boat": "Bateau {name}",
   "create-game": "Créer une partie",
+  "leave": "Quitter",
+  "share-to-friend": "Partager ce lien à un ami",
   "skin": "Skin {name}",
   "test.key": "Clé de test",
   "test.keyWithReplacedValue": "Pour moi, c’est un {value}. Un {value}, tout le monde sait ce que c’est…",
