--- a/src/translation/languages/fr.json
+++ b/src/translation/languages/fr.json
@@ -7,6 +7,7 @@
   "leave": "Quitter",
   "share-to-friend": "Partager ce lien à un ami",
   "skin": "Skin {name}",
+  "start": "Commencer",
   "test.key": "Clé de test",
   "test.keyWithReplacedValue": "Pour moi, c’est un {value}. Un {value}, tout le monde sait ce que c’est…",
   "versus": "VS",
