--- a/src/translation/languages/fr.json
+++ b/src/translation/languages/fr.json
@@ -4,6 +4,7 @@
   "battleship-logo": "Logo Battleship",
   "boat": "Bateau {name}",
   "create-game": "Créer une partie",
+  "game-in-progress": "Partie en cours",
   "leave": "Quitter",
   "share-to-friend": "Partager ce lien à un ami",
   "skin": "Skin {name}",
