--- a/src/translation/languages/fr.json
+++ b/src/translation/languages/fr.json
@@ -6,6 +6,6 @@
   "skin": "Skin {name}",
   "test.key": "Clé de test",
   "test.keyWithReplacedValue": "Pour moi, c’est un {value}. Un {value}, tout le monde sait ce que c’est…",
-  "waiting": "En attente...",
-  "versus": "VS"
+  "versus": "VS",
+  "waiting": "En attente..."
 }
