--- a/src/translation/languages/fr.json
+++ b/src/translation/languages/fr.json
@@ -6,6 +6,7 @@
   "create-game": "Créer une partie",
   "game-in-progress": "Partie en cours",
   "leave": "Quitter",
+  "place-your-boats": "Placez vos bateaux",
   "share-to-friend": "Partager ce lien à un ami",
   "skin": "Skin {name}",
   "start": "Commencer",
