--- a/src/translation/languages/fr.json
+++ b/src/translation/languages/fr.json
@@ -5,8 +5,12 @@
   "boat": "Bateau {name}",
   "create-game": "Créer une partie",
   "game-in-progress": "Partie en cours",
+  "i-am-not-ready": "Je ne suis pas prêt",
+  "i-am-ready": "Je suis prêt",
   "leave": "Quitter",
   "place-your-boats": "Placez vos bateaux",
+  "player-placing-his-boats": "{pseudo} place ses bateaux...",
+  "random": "Aléatoire",
   "share-to-friend": "Partager ce lien à un ami",
   "skin": "Skin {name}",
   "start": "Commencer",
