--- a/src/translation/languages/fr.json
+++ b/src/translation/languages/fr.json
@@ -10,6 +10,7 @@
   "leave": "Quitter",
   "place-your-boats": "Placez vos bateaux",
   "player-placing-his-boats": "{pseudo} place ses bateaux...",
+  "player-ready": "{pseudo} est prêt !",
   "random": "Aléatoire",
   "share-to-friend": "Partager ce lien à un ami",
   "skin": "Skin {name}",
@@ -17,5 +18,6 @@
   "test.key": "Clé de test",
   "test.keyWithReplacedValue": "Pour moi, c’est un {value}. Un {value}, tout le monde sait ce que c’est…",
   "versus": "VS",
-  "waiting": "En attente..."
+  "waiting": "En attente...",
+  "waiting-for-host": "En attente de l'hôte de la partie..."
 }
