Create page for boats placement (#32)
* 🍱 Add temporary images

* 🚀 PlayersCards component

* 🚀 TitleIndication component

* 💄 Deplace styles

* 🩹 Fix props

* 🚧 WIP

* 💄 Fix size board

* 🩹 Fix model

* 🎨 Clean structure

* 🩹 Fix selectGamePlayers

* 🚀 Hide sharelink for the rival

* 📝 Update team members

* 🍱 Add boats image

* 🚧 WIP

* 💄 Format css

* 🚨 Fix lint

* 🚀 Check boat position in the board

* 🚀 Place random boats

* 🚀 Start hasBoatsSafetyZone feature

* 🚧 WIP

* 🚧 WIP

* 🚧 WIP

* 🚧 WIP

* 🚧 WIP

* 💄 Error boat on rotation

* 🚧 Boat rotation

* 🐛 Fix boats rotation

* 🩹 Fix some bug

* 🚀 Add parser

* 🎨 Rename property

* 🔥 Remove unvalidate boats

* 👽️ Settings received in game created

* 💡 Add comment

* 🎨 Better get instance

* 🚀 Parsed authorized fleet

* 🚚 Move component Boat in boat domain

* 🔥 Remove code

* 🏷️ Add damageArea in Weapon

* 🎨 Clean import

* 🏷️ Update tmp model

* 🚀 Parsers

* 🚨 Fix constant

* 🎨 Rename model

* 🚨 Fix lint

* 💡 Add comment

* 💡 Add comment

* 🎨 Rename selectors

* 🩹 Fix parseAuthorizedFleet

* 🏷️ Update IntRange model

* 🚀 Add parseInt method in NumberHelpers

* 🎨 Clean sort properties

* 🚀 Parse game state

* 🎨 Clean actions reducer

* 🚀 Add event game already created

* 💡 Add comment

* 🚀 Parse game board boats for API

* 🎨 Change wording admin to host

* 🔥 Remove line

* 👽️ Fix boat size properties

* 🚀 Closed room

* 🚀 Leave room

* ⚡️ DeepClone function

* 🔨 Prettier check all files

* 🎨 End line Versus component

* 🚨 Fix error

* 💄 Reduce size board

* 💄 Header z-index

* 🔥 Remove ContentPage

* 💄 Margin bottom for TitleIndication

* 💄 Global styles

* 🚀 PageContainer component

* 🚚 Move into folder GameOneVersusOne

* 💄 Padding page container content

* 💄 Styles

* 🚨 Fix styles lint

* 🩹 Title header priority

* 🚀 WaitingForTheHost component

* 🏷️ Update typ

--- a/src/translation/languages/fr.json
+++ b/src/translation/languages/fr.json
@@ -5,12 +5,21 @@
   "boat": "Bateau {name}",
   "create-game": "Créer une partie",
   "game-in-progress": "Partie en cours",
+  "game-is-about-to-begin.counter": "La partie va commencer dans {counter} seconde{plural}...",
+  "game-is-about-to-begin": "La partie va commencer...",
+  "i-am-not-ready": "Je ne suis pas prêt",
+  "i-am-ready": "Je suis prêt",
   "leave": "Quitter",
+  "place-your-boats": "Placez vos bateaux",
+  "player-placing-his-boats": "{pseudo} place ses bateaux...",
+  "player-ready": "{pseudo} est prêt !",
+  "random": "Aléatoire",
   "share-to-friend": "Partager ce lien à un ami",
   "skin": "Skin {name}",
   "start": "Commencer",
   "test.key": "Clé de test",
   "test.keyWithReplacedValue": "Pour moi, c’est un {value}. Un {value}, tout le monde sait ce que c’est…",
   "versus": "VS",
-  "waiting": "En attente..."
+  "waiting": "En attente...",
+  "waiting-for-host": "En attente de l'hôte..."
 }
